[package]
name = "To-do-list"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
chrono = "0.4.43"
rust-analyzer = "0.0.1"
rustfmt = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres","chrono", "runtime-tokio-native-tls"] }
